--- a/src/components/home/Header.css
+++ b/src/components/home/Header.css
@@ -13,10 +13,14 @@ p{
 }
 .hi{
     position: absolute;
-    right: 100px;
+    right: 200px;
     
 }
 .hia{
+    position: absolute;
+    right: 120px;
+}
+.hias{
     position: absolute;
     right: 30px;
 }
@@ -28,4 +32,14 @@ p{
     width: 300px;
     margin-left: 400px;
     text-align: center;
+}
+.av{
+    margin-top: 50px;
+    display: inline-block;
+}
+h5{
+    display: inline;
+}
+img{
+    padding-top: 30px;
 }
